# esbuild-bundle

./: CHANGELOG.md  Cargo.toml  README.md
.forgejo/workflows/: check.yaml  deploy.yaml
examples/print-bundle/: Cargo.toml
examples/print-bundle/scripts/: my-module.js  other-module.js
examples/print-bundle/src/: main.rs
src/: javascript.rs  lib.rs
